objects/LLC_BI__Valuation__c.object
<CustomObject>
    <description>The Valuation object tracks the status of a valuation associated with a draw request.</description>
    <fields>
        <fullName>LLC_BI__Completed_Date__c</fullName>
        <description>The date that this valuation was completed.</description>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the loan associated with this valuation.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Valuation</relationshipLabel>
        <relationshipName>Valuation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Date__c</fullName>
        <description>The date that this valuation will begin.</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>The status of the valuation.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Transaction_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the transaction request associated with this valuation.</description>
        <label>Transaction Request</label>
        <referenceTo>LLC_BI__Transaction_Request__c</referenceTo>
        <relationshipLabel>Valuation</relationshipLabel>
        <relationshipName>Valuation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>The type of valuation this object is.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inspection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Valuation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>VAL-{000000000}</displayFormat>
        <label>Valuation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Valuations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>